--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-redux": "7.2.0",
+    "react": "^16.11.0",
+    "react-native": "^0.62.2",
+    "react-redux": "^7.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-saga": "1.1.3"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
-    "@babel/core": "7.10.3",
-    "@babel/runtime": "7.10.3",
-    "@react-native-community/eslint-config": "2.0.0",
-    "babel-jest": "26.0.1",
-    "eslint": "7.3.1",
-    "jest": "26.0.1",
-    "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.11.0"
+    "@babel/core": "^7.10.3",
+    "@babel/runtime": "^7.10.3",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.0.1",
+    "eslint": "^7.3.1",
+    "jest": "^26.0.1",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "^16.11.0"
   },
   "jest": {
     "preset": "react-native"
