--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.6.0",
+    "@react-navigation/stack": "^5.6.0",
     "react": "^16.11.0",
     "react-native": "^0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.6",
+    "react-native-screens": "^2.9.0",
     "react-redux": "^7.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
